<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="match_parent" android:background="@drawable/gradient">
	<LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
		<LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:weightSum="1.0">
	    	<LinearLayout android:id="@+id/linearLayout2" android:layout_height="match_parent" android:orientation="vertical" android:layout_width="0dip" android:layout_weight="0.6">
	       		<TextView android:textSize="25sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/developed_by"></TextView>
				<TextView android:textSize="25sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/miller_byteworks"></TextView>
				<TextView android:textSize="25sp" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvMillerByteworksURL" android:autoLink="web" android:linksClickable="true" android:text="@string/miller_byteworks_url"></TextView>
				<Button android:layout_width="match_parent" android:id="@+id/btnFollowMe" android:text="@string/follow_me" android:layout_height="wrap_content"></Button>
	       	</LinearLayout>
			<ImageView android:id="@+id/imageView1" android:layout_height="wrap_content" android:src="@drawable/james" android:layout_width="0dip" android:layout_weight="0.4"></ImageView>
		</LinearLayout>
	</LinearLayout>    
</LinearLayout>